fix(locale-modal): wrap token name with quotes

--- a/packages/styles/scss/components/locale-modal/_locale-modal.scss
+++ b/packages/styles/scss/components/locale-modal/_locale-modal.scss
@@ -120,7 +120,7 @@
       }
 
       .#{$prefix}--modal-header__heading {
-        @include carbon--type-style(expressive-heading-04, true);
+        @include carbon--type-style('expressive-heading-04', true);
 
         margin-top: $carbon--spacing-04;
 
